# aspeed-zephyr-project

./: .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  west.yml
apps/aspeed-pfr/: CMakeLists.txt  Kconfig  Kconfig.rsu  Kconfig.spdm  mbedtls_config.h  prj.conf
apps/aspeed-pfr/boards/: ast1060_dcscm.conf  ast1060_dcscm.overlay  ast1060_dcscm_amd.conf  ast1060_dcscm_amd.overlay  ast1060_dcscm_dice.conf  ast1060_dcscm_dice.overlay  ast1060_dcscm_gpio_bhs.dts  ast1060_dcscm_gpio_common.dts  ast1060_dcscm_gpio_egs.dts  ast1060_dcscm_gpio_genoa.dts  ast1060_dual_flash.conf  ast1060_dual_flash.overlay  ast1060_dual_flash_amd.conf  ast1060_dual_flash_amd.overlay  ast1060_dual_flash_dice.conf  ast1060_dual_flash_dice.overlay  ast1060_evb.conf  ast1060_evb.overlay  ast1060_prot.conf  ast1060_prot.overlay  ast1060_prot_gpio_bhs.dts  ast1060_prot_gpio_common.dts
apps/aspeed-pfr/dts/bindings/: aspeed,pfr-gpio-bhs.yaml  aspeed,pfr-gpio-common.yaml  aspeed,pfr-gpio-egs.yaml  aspeed,pfr-gpio-genoa.yaml  demo,gpio_basic_api.yaml
apps/aspeed-pfr/src/: CMakeLists.txt  main.c
apps/aspeed-pfr/src/AspeedStateMachine/: AspeedStateMachine.c  AspeedStateMachine.h  CMakeLists.txt  TestShell.c  common_smc.h
apps/aspeed-pfr/src/I2c_Handler/: BmcI2C_handler.c  BmcI2C_handler.h  PchI2C_handler.c  PchI2c_handler.h
apps/aspeed-pfr/src/SPDM/: CMakeLists.txt  SPDMBuffer.c  SPDMBuffer.h  SPDMCommon.h  SPDMContext.c  SPDMContext.h  SPDMCrypto.c  SPDMCrypto.h  SPDMDefinitions.h  SPDMMain.c  SPDMMctpBinding.c  SPDMMctpBinding.h  SPDMRequester.c  SPDMRequester.h  SPDMResponder.c  SPDMResponder.h
apps/aspeed-pfr/src/Smbus_mailbox/: CMakeLists.txt  Smbus_mailbox.c  Smbus_mailbox.h  provision_shell.c
apps/aspeed-pfr/src/StateMachineAction/: CMakeLists.txt  StateMachineActions.c  StateMachineActions.h
apps/aspeed-pfr/src/cerberus_pfr/: CMakeLists.txt  cerberus_pfr_authentication.c  cerberus_pfr_authentication.h  cerberus_pfr_common.c  cerberus_pfr_common.h  cerberus_pfr_definitions.h  cerberus_pfr_key_cancellation.c  cerberus_pfr_key_cancellation.h  cerberus_pfr_key_manifest.c  cerberus_pfr_key_manifest.h  cerberus_pfr_provision.c  cerberus_pfr_provision.h  cerberus_pfr_recovery.c  cerberus_pfr_recovery.h  cerberus_pfr_smbus_filtering.c  cerberus_pfr_smbus_filtering.h  cerberus_pfr_smbus_filtering_data.c  cerberus_pfr_spi_filtering.c  cerberus_pfr_spi_filtering.h  cerberus_pfr_svn.c  cerberus_pfr_svn.h  cerberus_pfr_update.c  cerberus_pfr_update.h  cerberus_pfr_verification.c  cerberus_pfr_verification.h  test_cerberus_pfr_shell.c
apps/aspeed-pfr/src/common/: CMakeLists.txt  common.c  common.h  pfm_headers.h
apps/aspeed-pfr/src/context_manager/: CMakeLists.txt  context_manager.c  context_manager.h
apps/aspeed-pfr/src/engineManager/: CMakeLists.txt  engine_manager.c  engine_manager.h
apps/aspeed-pfr/src/imageRecovery/: image_recovery.c  image_recovery.h
apps/aspeed-pfr/src/imageVerification/: image_verify.c  image_verify.h
apps/aspeed-pfr/src/include/: CMakeLists.txt  SmbusMailBoxCom.h  definitions.h
apps/aspeed-pfr/src/intel_pfr/: CMakeLists.txt  intel_pfr_authentication.c  intel_pfr_authentication.h  intel_pfr_cpld_utils.c  intel_pfr_cpld_utils.h  intel_pfr_definitions.h  intel_pfr_key_cancellation.c  intel_pfr_key_cancellation.h  intel_pfr_pbc.c  intel_pfr_pbc.h  intel_pfr_pfm_manifest.c  intel_pfr_pfm_manifest.h  intel_pfr_provision.c  intel_pfr_provision.h  intel_pfr_recovery.c  intel_pfr_recovery.h  intel_pfr_rsu_utils.c  intel_pfr_rsu_utils.h  intel_pfr_spi_filtering.c  intel_pfr_spi_filtering.h  intel_pfr_svn.c  intel_pfr_svn.h  intel_pfr_update.c  intel_pfr_update.h  intel_pfr_verification.c  intel_pfr_verification.h  test_intel_pfr_shell.c
apps/aspeed-pfr/src/keystore/: CMakeLists.txt  KeystoreManager.c  KeystoreManager.h
apps/aspeed-pfr/src/manifestProcessor/: CMakeLists.txt  manifestProcessor.c  manifestProcessor.h
apps/aspeed-pfr/src/mctp/: CMakeLists.txt  cmd_channel_mctp.c  cmd_channel_mctp.h  mctp.c  mctp.h  mctp_i3c.c  mctp_smbus.c  mctp_task.c  mctp_utils.h  plat_mctp.c  plat_mctp.h  test_mctp_shell.c
apps/aspeed-pfr/src/pfr/: CMakeLists.txt  pfr_common.c  pfr_common.h  pfr_recovery.c  pfr_recovery.h  pfr_ufm.c  pfr_ufm.h  pfr_update.c  pfr_update.h  pfr_util.c  pfr_util.h  pfr_verifcation.h  (+2 more)
apps/aspeed-pfr/tools/: README.md  kcc_capsule.py  kcc_capsule.xml  pfr_config.xml  rot_dcc_capsule.py  rot_dcc_capsule.xml  rot_update_capsule.py  rot_update_capsule.xml  spi_fileter_checker.py
apps/preload-fw/: CMakeLists.txt  Kconfig  README.md  README.rst  build_config.h.in  prj.conf  sample.yaml
apps/preload-fw/boards/: ast1060_dcscm.conf  ast1060_dcscm.overlay  ast1060_dcscm_dice.conf  ast1060_dcscm_dice.overlay  ast1060_dcscm_gpio_common.dts  ast1060_dcscm_gpio_mp.dts  ast1060_dual_flash_dice.conf  ast1060_dual_flash_dice.overlay  ast1060_mp.conf  ast1060_mp.overlay  ast10x0_mp.conf  ast10x0_mp.overlay
apps/preload-fw/sample/: README.md  inter.cert.der
apps/preload-fw/src/: CMakeLists.txt  main.c
apps/preload-fw/tools/: README.md  mp_binary_generator.py  mp_build_env.conf  programmer_preload_gen.conf  programmer_preload_gen.py
(+286 files in other folders)
